--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "debug": "^2.2.0",
+    "electron": "^1.4.0",
     "node-forge": "^0.6.42",
     "qs": "^6.2.1",
     "url": "^0.11.0"
