--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -3,3 +3,4 @@ installedESLint: true
 
 rules:
   no-param-reassign: [error, props: false]
+  import/no-extraneous-dependencies: [error, devDependencies: true]
