--- a/package.json
+++ b/package.json
@@ -4,22 +4,46 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "postinstall": "typings install",
     "pretest": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index"
+    "build": "webpack",
+    "start": "DEBUG=* electron index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@angular/common": "2.0.0",
+    "@angular/compiler": "2.0.0",
+    "@angular/core": "2.0.0",
+    "@angular/forms": "2.0.0",
+    "@angular/http": "2.0.0",
+    "@angular/platform-browser": "2.0.0",
+    "@angular/platform-browser-dynamic": "2.0.0",
+    "@angular/router": "3.0.0",
+    "@angular/upgrade": "2.0.0",
+    "core-js": "^2.4.1",
     "debug": "^2.2.0",
     "electron": "^1.4.0",
+    "lodash": "^4.15.0",
     "node-forge": "^0.6.42",
     "qs": "^6.2.1",
-    "url": "^0.11.0"
+    "reflect-metadata": "^0.1.3",
+    "rxjs": "5.0.0-beta.12",
+    "systemjs": "^0.19.27",
+    "url": "^0.11.0",
+    "zone.js": "^0.6.23"
   },
   "devDependencies": {
     "eslint": "^3.5.0",
     "eslint-config-airbnb-base": "^7.1.0",
-    "eslint-plugin-import": "^1.15.0"
+    "eslint-plugin-import": "^1.15.0",
+    "nodemon": "^1.10.2",
+    "ts-loader": "^0.8.2",
+    "tslint": "^3.15.1",
+    "typescript": "^1.8.10",
+    "typings": "^1.3.3",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.16.1"
   }
 }
